--- a/static/style.css
+++ b/static/style.css
@@ -169,9 +169,10 @@ label + img {
     color: limegreen;
 }
 
-/*.part {
-    color: #0DC0E5;
-}*/
+.part {
+    color: #0DACCD;
+    /*color: #0DACCD;*/
+}
 
 .backlog td {
     opacity: 0.4;
