j'aime mieux le vert

--- a/static/style.css
+++ b/static/style.css
@@ -170,8 +170,8 @@ label + img {
 }
 
 .part {
-    color: #0DACCD;
-    /*color: #0DACCD;*/
+    /* color: #0DACCD; */
+    /*color: #0DC0E5;*/
 }
 
 .backlog td {
