--- a/static/style.css
+++ b/static/style.css
@@ -78,6 +78,7 @@ main {
     flex: 1;
     font-size: 30px;
     padding: 6px 0px;
+    min-width: 0;
 }
 
 table {
@@ -97,7 +98,7 @@ td:not(:last-child) {
 }
 
 td:not(:nth-child(2)) {
-    /*white-space: nowrap;*/
+    white-space: nowrap;
     padding: 0 5px;
     padding-bottom: 2px;
     text-align: right;
