--- a/static/style.css
+++ b/static/style.css
@@ -40,7 +40,9 @@ header {
 #gear {
     float: right;
     font-size: 32px;
-    padding: 15px;
+    padding: 17px;
+    padding-top: 16px;
+    padding-bottom: 14px;
     margin-right: 5px;
 }
 
