--- a/static/style.css
+++ b/static/style.css
@@ -286,5 +286,6 @@ label + img {
 }
 
 #louspeak {
-    margin-bottom: 20px !important;
+    margin-bottom: 19px !important;
+    margin-top: 1px;
 }
