--- a/static/style.css
+++ b/static/style.css
@@ -288,3 +288,13 @@ label + img {
 #louspeak {
     margin-bottom: 20px !important;
 }
+
+select {
+    background: transparent;
+    border: none;
+    font-size: 20px;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    top: -4px;
+}
