--- a/static/style.css
+++ b/static/style.css
@@ -207,6 +207,11 @@ label + img {
     color: limegreen;
 }
 
+.greentext {
+    color: #789922;
+    font-family: monospace;
+}
+
 .part {
     color: #0DACCD;
     /*color: #0DC0E5;*/
