--- a/static/style.css
+++ b/static/style.css
@@ -82,7 +82,6 @@ main {
 	text-indent: 6px;
 	outline: 0;
 	border: 0;
-	cursor: text;
 	border-top: 1px solid #666;
 	background: transparent;
 }
@@ -188,7 +187,7 @@ a {
     text-decoration: none;
 }
 
-a:hover, .sound:hover, #sidebtns > img:hover, input:hover, #prefs label:hover {
+a:hover, .sound:hover, #sidebtns > img:hover, #prefs input:hover, #prefs label:hover {
     opacity: 0.8;
     cursor: pointer;
 }
