--- a/static/style.css
+++ b/static/style.css
@@ -19,7 +19,7 @@ html, body {
 header {
 	flex: 1;
 	display: flex;
-	height: 50px;
+	min-height: 50px;
 	border-bottom: 1px solid #666;
 }
 
@@ -32,6 +32,7 @@ header, #prefsttl {
 }
 
 h1 {
+	flex: 1;
 	margin: 9px;
 	font-size: 25px;
 	font-weight: normal;
