--- a/static/style.css
+++ b/static/style.css
@@ -114,20 +114,23 @@ main {
 	display: -ms-flexbox;
 	display: flex;
 	min-height: 50px;
+	border-top: 1px solid #BBB;
+}
+
+#chatentry img {
+	padding: 12px 8px;
 }
 
 #input {
 	-webkit-box-flex: 1;
 	    -ms-flex: 1;
 	        flex: 1;
-	height: 50px ;
+	height: 49px ;
 	font-size: 30px;
-	padding: 6px 0px;
-	text-indent: 6px;
+	padding: 6px;
 	min-width: 0;
 	outline: 0;
 	border: 0;
-	border-top: 1px solid #BBB;
 	background: transparent;
 }
 
@@ -202,7 +205,7 @@ td:first-child {
 	width: 185px;
 }
 
-#sidebtns img {
+#sidebtns img, #chatentry img {
 	height: 24px;
 	width: 24px;
 }
@@ -244,7 +247,7 @@ a, #chattbl td:nth-child(2) span:hover a {
 	text-decoration: none;
 }
 
-a:hover, .sound:hover, #sidebtns > img:hover, #prefs input:hover, #prefs label:hover {
+a:hover, .sound:hover, #sidebtns > img:hover, #chatentry > img:hover, #prefs input:hover, #prefs label:hover, select:hover {
 	opacity: 0.8;
 	cursor: pointer;
 }
