Fixed speech sending empty messages

--- a/static/style.css
+++ b/static/style.css
@@ -127,7 +127,8 @@ main {
 	        flex: 1;
 	height: 49px ;
 	font-size: 30px;
-	padding: 6px;
+	padding: 0 6px;
+	text-indent: 6px;
 	min-width: 0;
 	outline: 0;
 	border: 0;
