better mrle theme performance
Former-commit-id: 949013b9ce64a2a763c5f20f5225e3e82cfa903f

--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,4 @@
-﻿div, header, input {
+div, header, input {
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -572,7 +572,7 @@ select {
 	font-family: monospace;
 }
 
-.rainbow #chat label, .rainbow #chatentry .btn, .rainbow #sidebtns .btn, .rainbow .log {
+.rainbow #chat tr:nth-last-of-type(-n+50) label, .rainbow #chatentry .btn, .rainbow #sidebtns .btn, .rainbow .log:nth-last-of-type(-n+50) {
 	-webkit-animation: fader 30s infinite;
 	-ms-animation: fader 30s infinite;
 	animation: fader 30s infinite;
